# safeshell

./: .envrc  .gitignore  .pre-commit-config.yaml  .thailint.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml  test-mermaid.md
.ai/: ai-context.md  ai-rules.md  index.yaml  layout.yaml
.ai/docs/: PROJECT_CONTEXT.md  PYTHON_STANDARDS.md  fail-open-behavior.md  file-header-format.md
.ai/howtos/: how-to-add-cli-commands.md  how-to-add-condition-types.md  how-to-debug-rules.md  how-to-fix-linting-errors.md  how-to-roadmap.md  how-to-understand-rule-evaluation.md  how-to-use-safeshell-cli.md  how-to-write-file-headers.md  how-to-write-rules.md
.ai/templates/: file-header-python.template  roadmap-ai-context.md.template  roadmap-pr-breakdown.md.template  roadmap-progress-tracker.md.template
.github/workflows/: lint.yml  security.yml  test.yml
.hooks/: check-ai-index.sh
.roadmap/: REQUIREMENTS.md
.roadmap/complete/approval-workflow/: PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/complete/demo-and-testing/: DEMO_GUIDE.md  PROGRESS_TRACKER.md
.roadmap/complete/mvp-phase1/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/complete/phase1-readme/: PROGRESS_TRACKER.md
.roadmap/complete/phase3-linting/: AI_CONTEXT.md
.roadmap/complete/phase4-architecture-review/: PROGRESS_TRACKER.md
.roadmap/complete/phase5-rules/: PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/complete/phase7-performance/: AI_CONTEXT.md  PROGRESS_TRACKER.md
.roadmap/in-progress/approval-workflow/: AI_CONTEXT.md  PROGRESS_TRACKER.md
.roadmap/in-progress/demo-and-testing/: DEMO_GUIDE.md  PROGRESS_TRACKER.md
.roadmap/in-progress/phase2-cicd/: PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/in-progress/phase4-architecture-review/: AI_CONTEXT.md  PROGRESS_TRACKER.md
.roadmap/in-progress/phase4-architecture-review/artifacts/: ARCHITECTURE_REVIEW.md
.roadmap/in-progress/phase7-performance/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/in-progress/phase8-ui-ux/: PROGRESS_TRACKER.md
.roadmap/planning/approval-workflow/: PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/planning/phase1-readme/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/planning/phase10-pypi/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/planning/phase10-snap/: PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/planning/phase11-snap/: AI_CONTEXT.md
.roadmap/planning/phase2-cicd/: AI_CONTEXT.md
.roadmap/planning/phase3-linting/: PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/planning/phase4-architecture-review/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/planning/phase5-rules/: AI_CONTEXT.md  PROGRESS_TRACKER.md
.roadmap/planning/phase5-security/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/planning/phase6-performance/: AI_CONTEXT.md  PR_BREAKDOWN.md
.roadmap/planning/phase7-ui-ux/: AI_CONTEXT.md  PROGRESS_TRACKER.md  PR_BREAKDOWN.md
.roadmap/planning/phase8-documentation/: PROGRESS_TRACKER.md
.roadmap/planning/phase9-documentation/: AI_CONTEXT.md  PR_BREAKDOWN.md
.roadmap/python-cli-install/: PROGRESS_TRACKER.md
docs/: architecture-proposal.html  architecture.html  index.html
src/safeshell/: cli.py  config.py  console.py  exceptions.py  models.py  theme.py
src/safeshell/benchmarks/: __init__.py  cli.py  evaluation.py  overhead.py
src/safeshell/common/: __init__.py  paths.py
src/safeshell/daemon/: __init__.py  approval.py  cli.py  events.py  executor.py  lifecycle.py  manager.py  monitor.py  protocol.py  server.py  session_memory.py
src/safeshell/events/: __init__.py  bus.py  types.py
src/safeshell/gui/: __init__.py  __main__.py  app.py  approval_dialog.py  debug_window.py  main_window.py  settings.py  settings_dialog.py  tray.py
src/safeshell/hooks/: __init__.py  claude_code_hook.py
src/safeshell/monitor/: __init__.py  app.py  client.py  styles.css  widgets.py
src/safeshell/plugins/: __init__.py  base.py  git_protect.py
src/safeshell/rules/: __init__.py  azure.py  cache.py  cli.py  condition_types.py  defaults.py  evaluator.py  github.py  loader.py  schema.py
src/safeshell/shims/: __init__.py  init.bash  ls  manager.py  safeshell-check  safeshell-shim
src/safeshell/wrapper/: __init__.py  cli.py  client.py  shell.py
tests/: test_cli.py  test_config.py  test_console.py  test_git_context_cache.py  test_models.py
tests/benchmarks/: __init__.py  test_performance.py
tests/daemon/: test_approval.py  test_cli.py  test_events.py  test_executor.py  test_lifecycle.py  test_manager.py  test_monitor.py  test_protocol.py  test_server.py  test_session_memory.py
tests/events/: __init__.py  test_bus.py  test_types.py
tests/hooks/: __init__.py  test_claude_code_hook.py
tests/manual/: test_fail_open.sh
tests/monitor/: __init__.py  test_app.py  test_client.py  test_widgets.py
tests/plugins/: test_git_protect.py
tests/rules/: test_cache.py  test_cli.py  test_condition_cache.py  test_condition_types.py  test_default_rules.py  test_evaluator.py  test_github_rules.py  test_loader.py  test_schema.py
tests/shims/: __init__.py  test_manager.py
tests/wrapper/: test_cli.py  test_client.py  test_shell.py
