[tool.poetry]
name = "safeshell"
version = "0.1.0"
description = "A command-line safety layer for AI coding assistants"
authors = ["Steve Jackson"]
readme = "README.md"
packages = [{include = "safeshell", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.15.0"}
rich = "^14.2.0"
pydantic = "^2.0.0"
loguru = "^0.7.0"
pyyaml = "^6.0.0"
plumbum = "^1.9.0"
textual = "^6.8.0"
PyQt6 = "^6.6.0"
qasync = "^0.27.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.5.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"
pylint = "^3.3.0"
mypy = "^1.13.0"
bandit = "^1.8.0"
pre-commit = "^4.0.0"
thailint = "^0.4.6"
radon = "^6.0.0"
pip-audit = "^2.10.0"
safety = "3.5.1"
types-pyyaml = "^6.0.0"  # Type stubs for PyYAML

[tool.poetry.scripts]
safeshell = "safeshell.cli:app"
safeshell-wrapper = "safeshell.wrapper.shell:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "S",   # flake8-bandit
    "PTH", # flake8-use-pathlib (modern path handling)
]
ignore = [
    "S101",  # Allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"src/safeshell/cli.py" = ["F401"]  # Allow unused imports for side-effect registration
"tests/*" = ["S101"]  # Allow assert in tests

# Pylint configuration
[tool.pylint.main]
max-line-length = 100
extension-pkg-whitelist = ["PyQt6"]
ignore-paths = ["src/safeshell/gui"]  # GUI requires display, skip in CI

[tool.pylint.messages_control]
disable = [
    "R0903",  # too-few-public-methods (Pydantic models are intentionally simple DTOs)
    "C0415",  # import-outside-toplevel (CLI lazy loading for performance)
    "R0912",  # too-many-branches (validation logic often requires many branches)
    "R0911",  # too-many-return-statements (early returns improve readability)
    "W0718",  # broad-exception-caught (daemon error handling needs catch-all)
    "R0801",  # duplicate-code (similar cleanup patterns are acceptable)
    "W1510",  # subprocess-run-check (wrapper code intentionally ignores exit codes)
    "R0902",  # too-many-instance-attributes (daemon/server classes need many attrs)
    "R0913",  # too-many-arguments (event constructors need many params)
    "R0917",  # too-many-positional-arguments (same as R0913)
    "R0914",  # too-many-locals (complex event processing functions)
    "R0915",  # too-many-statements (long but clear functions)
    "W0212",  # protected-access (intentional internal API usage)
    "W1514",  # unspecified-encoding (daemon redirects to /dev/null)
    "R1732",  # consider-using-with (daemon file handles must stay open)
    "W0611",  # unused-import (side-effect imports in CLI)
    "C0301",  # line-too-long (occasionally needed for readability)
    "W0104",  # pointless-statement (plumbum & BG syntax for background execution)
    "E1136",  # unsubscriptable-object (false positive with Pydantic Field types)
]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# Allow relaxed rules in tests (testing patterns often need flexibility)
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Plumbum lacks type stubs - ignore missing imports
[[tool.mypy.overrides]]
module = ["plumbum", "plumbum.*"]
ignore_missing_imports = true

# qasync lacks type stubs - ignore missing imports
[[tool.mypy.overrides]]
module = ["qasync"]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B101",  # Allow assert
    "B110",  # try-except-pass: Daemon cleanup code intentionally ignores errors
    "B404",  # subprocess import: Required for shell wrapping functionality
    "B603",  # subprocess without shell: Safe - we control the command list
    "B606",  # start process no shell: Safe - intentional for exec replacement
    "B607",  # partial path: Safe - using poetry run for development utilities
]

# Coverage configuration
[tool.coverage.run]
omit = [
    "src/safeshell/gui/*",  # GUI requires display, tested manually
]

# Radon configuration
[tool.radon]
cc_min = "B"  # Report functions with complexity B or worse
show_complexity = true
average = true
